--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-asgiref==3.7.2
-Django==3.2.20
-psycopg2==2.9.7
-python-dotenv==0.21.1
-sqlparse==0.4.4
-typing_extensions==4.7.1
-whitenoise==6.5.0
+asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+cloudinary==1.32.0
+dj-database-url==2.0.0
+Django==4.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.14.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
+idna==3.4
+psycopg2==2.9.6
+PyJWT==2.7.0
+python-dotenv==1.0.0
+pytz==2023.3
+requests==2.28.2
+six==1.16.0
+sqlparse==0.4.3
+typing_extensions==4.5.0
+urllib3==1.26.15
+whitenoise==6.4.0
